[package]
name = "live_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
strategy_backtester = { path = "../strategy_backtester" }

