[package]
name = "live_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { path = "../binance-rs-with-OCO" }
strategy_backtester = { path = "../strategy_backtester" }
dotenv = "0.15.0"
round = "0.1"
